@@ -14,7 +14,8 @@ import org.braekpo1nt.mctmanager.games.game.interfaces.MCTGame;
 import org.braekpo1nt.mctmanager.games.game.spleef.config.SpleefConfig;
 import org.braekpo1nt.mctmanager.games.game.spleef.config.SpleefConfigController;
 import org.braekpo1nt.mctmanager.games.utils.ParticipantInitializer;
-import org.braekpo1nt.mctmanager.ui.sidebar.Headerable;
+import org.braekpo1nt.mctmanager.participant.Participant;
+import org.braekpo1nt.mctmanager.participant.Team;
 import org.braekpo1nt.mctmanager.ui.sidebar.KeyLine;
 import org.braekpo1nt.mctmanager.ui.sidebar.Sidebar;
 import org.braekpo1nt.mctmanager.ui.timer.TimerManager;
@@ -29,14 +30,11 @@ import org.bukkit.event.player.PlayerDropItemEvent;
 import org.bukkit.event.player.PlayerMoveEvent;
 import org.bukkit.event.player.PlayerTeleportEvent;
 import org.bukkit.scoreboard.Scoreboard;
-import org.bukkit.scoreboard.Team;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Random;
+import java.util.*;
 
-public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
+public class SpleefGame implements Listener, MCTGame, Configurable {
     private final Main plugin;
     private final GameManager gameManager;
     private final Random random = new Random();
@@ -48,7 +46,10 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
             .append(Component.text("Spleef"))
             .color(NamedTextColor.BLUE);
     private Component title = baseTitle;
-    private List<Player> participants = new ArrayList<>();
+    private Map<UUID, SpleefParticipant> participants = new HashMap<>();
+    private Map<UUID, SpleefParticipant.QuitData> quitDatas = new HashMap<>();
+    private Map<String, SpleefTeam> teams = new HashMap<>();
+    private Map<String, SpleefTeam.QuitData> teamQuitDatas = new HashMap<>();
     private List<Player> admins = new ArrayList<>();
     private List<SpleefRound> rounds = new ArrayList<>();
     private int currentRoundIndex = 0;
@@ -94,13 +95,20 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
     }
     
     @Override
-    public void start(List<Player> newParticipants, List<Player> newAdmins) {
-        participants = new ArrayList<>(newParticipants.size());
+    public void start(Collection<Team> newTeams, Collection<Participant> newParticipants, List<Player> newAdmins) {
+        participants = new HashMap<>(newParticipants.size());
+        this.quitDatas = new HashMap<>();
+        this.teamQuitDatas = new HashMap<>();
         sidebar = gameManager.createSidebar();
         adminSidebar = gameManager.createSidebar();
         plugin.getServer().getPluginManager().registerEvents(this, plugin);
         gameManager.getTimerManager().register(timerManager);
-        for (Player participant : newParticipants) {
+        this.teams = new HashMap<>(newTeams.size());
+        for (Team newTeam : newTeams) {
+            SpleefTeam team = new SpleefTeam(newTeam, 0);
+            this.teams.put(team.getTeamId(), team);
+        }
+        for (Participant participant : newParticipants) {
             initializeParticipant(participant);
         }
         initializeSidebar();
@@ -108,7 +116,7 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         for (int i = 0; i < config.getRounds(); i++) {
             rounds.add(new SpleefRound(plugin, gameManager, this, config, sidebar, adminSidebar));
         }
-        rounds.get(0).setFirstRound(true);
+        rounds.getFirst().setFirstRound(true);
         plugin.getLogger().info(String.format("rounds.size() = %d", rounds.size()));
         currentRoundIndex = 0;
         setupTeamOptions();
@@ -123,15 +131,26 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         messageAllParticipants(config.getDescription());
     }
     
-    private void initializeParticipant(Player participant) {
-        participants.add(participant);
+    private void initializeParticipant(Participant newParticipant) {
+        SpleefParticipant participant = new SpleefParticipant(newParticipant, 0);
+        participants.put(participant.getUniqueId(), participant);
+        teams.get(participant.getTeamId()).addParticipant(participant);
         sidebar.addPlayer(participant);
         teleportParticipantToRandomStartingPosition(participant);
         ParticipantInitializer.resetHealthAndHunger(participant);
         ParticipantInitializer.clearStatusEffects(participant);
     }
     
-    private void teleportParticipantToRandomStartingPosition(Player participant) {
+    private void reJoinParticipant(SpleefParticipant participant) {
+        participants.put(participant.getUniqueId(), participant);
+        teams.get(participant.getTeamId()).addParticipant(participant);
+        sidebar.addPlayer(participant);
+        teleportParticipantToRandomStartingPosition(participant);
+        ParticipantInitializer.resetHealthAndHunger(participant);
+        ParticipantInitializer.clearStatusEffects(participant);
+    }
+    
+    private void teleportParticipantToRandomStartingPosition(Participant participant) {
         int index = random.nextInt(config.getStartingLocations().size());
         participant.teleport(config.getStartingLocations().get(index));
         participant.setRespawnLocation(config.getStartingLocations().get(index), true);
@@ -164,7 +183,7 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         admins.add(admin);
         adminSidebar.addPlayer(admin);
         admin.setGameMode(GameMode.SPECTATOR);
-        admin.teleport(config.getStartingLocations().get(0));
+        admin.teleport(config.getStartingLocations().getFirst());
     }
     
     @Override
@@ -179,18 +198,41 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         }
         rounds.clear();
         gameActive = false;
-        for (Player participant : participants) {
+        saveScores();
+        for (Participant participant : participants.values()) {
             resetParticipant(participant);
         }
         clearSidebar();
         stopAdmins();
         participants.clear();
+        teams.clear();
+        quitDatas.clear();
+        teamQuitDatas.clear();
         gameManager.gameIsOver();
         Main.logger().info("Stopping Spleef");
     }
     
-    private void resetParticipant(Player participant) {
+    private void saveScores() {
+        Map<String, Integer> teamScores = new HashMap<>();
+        Map<UUID, Integer> participantScores = new HashMap<>();
+        for (SpleefTeam team : teams.values()) {
+            teamScores.put(team.getTeamId(), team.getScore());
+        }
+        for (SpleefParticipant participant : participants.values()) {
+            participantScores.put(participant.getUniqueId(), participant.getScore());
+        }
+        for (Map.Entry<String, SpleefTeam.QuitData> entry : teamQuitDatas.entrySet()) {
+            teamScores.put(entry.getKey(), entry.getValue().getScore());
+        }
+        for (Map.Entry<UUID, SpleefParticipant.QuitData> entry : quitDatas.entrySet()) {
+            participantScores.put(entry.getKey(), entry.getValue().getScore());
+        }
+        gameManager.addScores(teamScores, participantScores);
+    }
+    
+    private void resetParticipant(Participant participant) {
         ParticipantInitializer.clearInventory(participant);
+        teams.get(participant.getTeamId()).removeParticipant(participant.getUniqueId());
         sidebar.removePlayer(participant.getUniqueId());
     }
     
@@ -208,10 +250,8 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
     
     @EventHandler
     public void onPlayerLoseHunger(FoodLevelChangeEvent event) {
-        if (!(event.getEntity() instanceof Player participant)) {
-            return;
-        }
-        if (!participants.contains(participant)) {
+        Participant participant = participants.get(event.getEntity().getUniqueId());
+        if (participant == null) {
             return;
         }
         participant.setFoodLevel(20);
@@ -232,8 +272,7 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         if (event.getCurrentItem() == null) {
             return;
         }
-        Player participant = ((Player) event.getWhoClicked());
-        if (!participants.contains(participant)) {
+        if (!participants.containsKey(event.getWhoClicked().getUniqueId())) {
             return;
         }
         event.setCancelled(true);
@@ -247,8 +286,7 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         if (!gameActive) {
             return;
         }
-        Player participant = event.getPlayer();
-        if (!participants.contains(participant)) {
+        if (!participants.containsKey(event.getPlayer().getUniqueId())) {
             return;
         }
         event.setCancelled(true);
@@ -262,14 +300,14 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         if (config.getSpectatorArea() == null){
             return;
         }
-        if (!participants.contains(event.getPlayer())) {
+        if (!participants.containsKey(event.getPlayer().getUniqueId())) {
             return;
         }
         if (!event.getPlayer().getGameMode().equals(GameMode.SPECTATOR)) {
             return;
         }
         if (!config.getSpectatorArea().contains(event.getFrom().toVector())) {
-            event.getPlayer().teleport(config.getStartingLocations().get(0));
+            event.getPlayer().teleport(config.getStartingLocations().getFirst());
             return;
         }
         if (!config.getSpectatorArea().contains(event.getTo().toVector())) {
@@ -285,7 +323,7 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         if (config.getSpectatorArea() == null){
             return;
         }
-        if (!participants.contains(event.getPlayer())) {
+        if (!participants.containsKey(event.getPlayer().getUniqueId())) {
             return;
         }
         if (!event.getPlayer().getGameMode().equals(GameMode.SPECTATOR)) {
@@ -299,37 +337,74 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         }
     }
     
-    @Override
-    public void onParticipantJoin(Player participant) {
-        if (!gameActive) {
+    private void onTeamJoin(Team team) {
+        if (teams.containsKey(team.getTeamId())) {
             return;
         }
-        initializeParticipant(participant);
-        sidebar.updateLines(participant.getUniqueId(),
-                new KeyLine("title", title),
-                new KeyLine("round", String.format("Round %d/%d", currentRoundIndex+1, config.getRounds()))
-        );
-        if (currentRoundIndex < rounds.size()) {
-            SpleefRound currentRound = rounds.get(currentRoundIndex);
-            if (currentRound.isActive()) {
-                currentRound.onParticipantJoin(participant);
-            }
+        SpleefTeam.QuitData quitData = teamQuitDatas.get(team.getTeamId());
+        if (quitData != null) {
+            teams.put(team.getTeamId(), new SpleefTeam(team, quitData.getScore()));
+        } else {
+            teams.put(team.getTeamId(), new SpleefTeam(team, 0));
         }
     }
     
     @Override
-    public void onParticipantQuit(Player participant) {
+    public void onParticipantJoin(Participant participant, Team team) {
         if (!gameActive) {
             return;
         }
-        resetParticipant(participant);
-        participants.remove(participant);
+        onTeamJoin(team);
+        SpleefParticipant.QuitData quitData = quitDatas.remove(participant.getUniqueId());
+        if (quitData != null) {
+            reJoinParticipant(new SpleefParticipant(participant, quitData));
+        } else {
+            initializeParticipant(participant);
+        }
+        sidebar.updateLines(participant.getUniqueId(),
+                new KeyLine("title", title),
+                new KeyLine("round", String.format("Round %d/%d", currentRoundIndex+1, config.getRounds()))
+        );
+        displayScore(participants.get(participant.getUniqueId()));
+        displayScore(teams.get(team.getTeamId()));
         if (currentRoundIndex < rounds.size()) {
             SpleefRound currentRound = rounds.get(currentRoundIndex);
             if (currentRound.isActive()) {
-                currentRound.onParticipantQuit(participant);
+                currentRound.onParticipantJoin(
+                        participants.get(participant.getUniqueId()), 
+                        teams.get(team.getTeamId()));
             }
         }
+    }
+    
+    private void onTeamQuit(SpleefTeam team) {
+        if (team.size() > 0) {
+            return;
+        }
+        SpleefTeam removed = teams.remove(team.getTeamId());
+        teamQuitDatas.put(team.getTeamId(), removed.getQuitData());
+    }
+    
+    @Override
+    public void onParticipantQuit(UUID participantUUID, String teamId) {
+        if (!gameActive) {
+            return;
+        }
+        SpleefParticipant participant = participants.get(participantUUID);
+        if (participant == null) {
+            return;
+        }
+        quitDatas.put(participant.getUniqueId(), participant.getQuitData());
+        SpleefTeam spleefTeam = teams.get(teamId);
+        if (currentRoundIndex < rounds.size()) {
+            SpleefRound currentRound = rounds.get(currentRoundIndex);
+            if (currentRound.isActive()) {
+                currentRound.onParticipantQuit(participant, spleefTeam);
+            }
+        }
+        resetParticipant(participant);
+        participants.remove(participant.getUniqueId());
+        onTeamQuit(spleefTeam);
     }
     
     
@@ -344,7 +419,7 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
     
     public void startNextRound() {
         SpleefRound nextRound = rounds.get(currentRoundIndex);
-        nextRound.start(participants);
+        nextRound.start(participants.values(), teams.values());
         String round = String.format("Round %d/%d", currentRoundIndex + 1, rounds.size());
         sidebar.updateLine("round", round);
         adminSidebar.updateLine("round", round);
@@ -375,6 +450,47 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
                 new KeyLine("round", String.format("Round %d/%d", 1, config.getRounds())),
                 new KeyLine("timer", "")
         );
+        
+        for (SpleefTeam team : teams.values()) {
+            displayScore(team);
+        }
+        for (SpleefParticipant participant : participants.values()) {
+            displayScore(participant);
+        }
+    }
+    
+    // Only if you have subteams, like rounds
+    public void updateScore(SpleefRoundTeam team) {
+        SpleefTeam myTeam = teams.get(team.getTeamId());
+        myTeam.setScore(team.getScore());
+        displayScore(myTeam);
+    }
+    
+    // make this private if above used
+    private void displayScore(SpleefTeam team) {
+        Component contents = Component.empty()
+                .append(team.getFormattedDisplayName())
+                .append(Component.text(": "))
+                .append(Component.text(team.getScore())
+                        .color(NamedTextColor.GOLD));
+        for (UUID memberUUID : team.getMemberUUIDs()) {
+            sidebar.updateLine(memberUUID, "personalTeam", contents);
+        }
+    }
+    
+    // Only if you have sub-participants, like rounds
+    public void updateScore(SpleefRoundParticipant participant) {
+        SpleefParticipant myParticipant = participants.get(participant.getUniqueId());
+        myParticipant.setScore(participant.getScore());
+        displayScore(myParticipant);
+    }
+    
+    // make this private if above used
+    private void displayScore(SpleefParticipant participant) {
+        sidebar.updateLine(participant.getUniqueId(), "personalScore", Component.empty()
+                .append(Component.text("Personal: "))
+                .append(Component.text(participant.getScore()))
+                .color(NamedTextColor.GOLD));
     }
     
     private void clearSidebar() {
@@ -382,50 +498,28 @@ public class SpleefGame implements Listener, MCTGame, Configurable, Headerable {
         sidebar = null;
     }
     
-    @Override
-    public void updateTeamScore(Player participant, Component contents) {
-        if (sidebar == null) {
-            return;
-        }
-        if (!participants.contains(participant)) {
-            return;
-        }
-        sidebar.updateLine(participant.getUniqueId(), "personalTeam", contents);
-    }
-    
-    @Override
-    public void updatePersonalScore(Player participant, Component contents) {
-        if (sidebar == null) {
-            return;
-        }
-        if (!participants.contains(participant)) {
-            return;
-        }
-        sidebar.updateLine(participant.getUniqueId(), "personalScore", contents);
-    }
-    
     private void setupTeamOptions() {
         Scoreboard mctScoreboard = gameManager.getMctScoreboard();
-        for (Team team : mctScoreboard.getTeams()) {
+        for (org.bukkit.scoreboard.Team team : mctScoreboard.getTeams()) {
             team.setAllowFriendlyFire(false);
             team.setCanSeeFriendlyInvisibles(true);
-            team.setOption(Team.Option.NAME_TAG_VISIBILITY, Team.OptionStatus.ALWAYS);
-            team.setOption(Team.Option.DEATH_MESSAGE_VISIBILITY, Team.OptionStatus.ALWAYS);
-            team.setOption(Team.Option.COLLISION_RULE, Team.OptionStatus.NEVER);
+            team.setOption(org.bukkit.scoreboard.Team.Option.NAME_TAG_VISIBILITY, org.bukkit.scoreboard.Team.OptionStatus.ALWAYS);
+            team.setOption(org.bukkit.scoreboard.Team.Option.DEATH_MESSAGE_VISIBILITY, org.bukkit.scoreboard.Team.OptionStatus.ALWAYS);
+            team.setOption(org.bukkit.scoreboard.Team.Option.COLLISION_RULE, org.bukkit.scoreboard.Team.OptionStatus.NEVER);
         }
     }
     
     private void messageAllParticipants(Component message) {
-        gameManager.messageAdmins(message);
-        for (Player participant : participants) {
-            participant.sendMessage(message);
-        }
+        Audience.audience(
+                Audience.audience(admins),
+                Audience.audience(participants.values())
+        ).sendMessage(message);
     }
     
     public void showTitle(@NotNull Title title) {
         Audience.audience(
                 Audience.audience(admins),
-                Audience.audience(participants)
+                Audience.audience(participants.values())
         ).showTitle(title);
     }
 }
